--- a/sections/collage.liquid
+++ b/sections/collage.liquid
@@ -25,7 +25,7 @@
         {{ section.settings.heading }}
       </h2>
     {%- endif -%}
-    <div class="collage{% if section.settings.mobile_layout == 'collage' %} .ulta collage--mobile{% endif %}">
+    <div class="collage{% if section.settings.mobile_layout == 'collage' %} collage--mobile{% endif %}">
       {% assign skip_card_product_styles = false %}
       {%- for block in section.blocks -%}
         <div
